--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
             <hr>
             <ul id="list">
                 <li>
-                    <div>milk</div>
+                    <div>Milk</div>
                     <button>edit</button>
                     <button>X</button>
                 </li>
                 <li>
-                    <div>cherios</div>
+                    <div>Cheerios</div>
                     <button>edit</button>
                     <button>X</button>
                 </li>
                 <li>
-                    <div>2 goats</div>
+                    <div>2 Goats</div>
                     <button>edit</button>
                     <button>X</button>
                 </li>  
