--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Mom's Shopping List</title>
 </head>
+
 <body>
     <div class="title-bar">
         <h1 class="title">Mom's Shopping List</h1>
@@ -15,10 +17,10 @@
         <div class="title-bar">
             <h3 class="title">Add Item</h3>
         </div>
-        <form name="addItem" id="add-todo">
+        <form name="grocery-h">
             <label class="label" for="title">Item name</label>
-            <input class="input" name="title" id="title" />
-            <button>submit</button>
+            <input type="text" name="food" id="food"/>
+            <button type="submit">submit</button>
         </form>
         <div class="todos">
             <div class="title-bar">
@@ -28,23 +30,14 @@
             <ul id="list">
                 <li>
                     <div>Milk</div>
-                    <button>edit</button>
-                    <button>X</button>
+                    <button id="edit">edit</button>
+                    <button id="delete2">X</button>
                 </li>
-                <li>
-                    <div>Cheerios</div>
-                    <button>edit</button>
-                    <button>X</button>
-                </li>
-                <li>
-                    <div>2 Goats</div>
-                    <button>edit</button>
-                    <button>X</button>
-                </li>  
-                <hr>              
+                <hr>
             </ul>
         </div>
     </div>
     <script src="index.js"></script>
 </body>
+
 </html>
